--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -4,28 +4,44 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Website</title>
+    <title>TravelBuddy</title>
     <link rel="stylesheet" href="styles.css"> 
-    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
-        <!-- Navigation Menu -->
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Travel Buddy</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar" title="Btn">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Plans</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">contact</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </nav>
     </header>
 
     <section class="hero">
         <!-- Hero section with an image and welcome message -->
         <div class="hero-content">
             <h1>Explore the World, One Destination at a Time.</h1>
-            <p>Explore the World, One Destination at a Time.</p>
+            <p>With us</p>
         </div>
     </section>
 
@@ -81,9 +97,9 @@
         <p>&copy; 2024 Your Website. All rights reserved.</p>
         <!-- Social media icons -->
         <ul class="social-icons">
-            <li><a href="#"><img src="facebook-icon.png" alt="Facebook"></a></li>
-            <li><a href="#"><img src="twitter-icon.png" alt="Twitter"></a></li>
-            <li><a href="#"><img src="instagram-icon.png" alt="Instagram"></a></li>
+            <li><a href="#"><img src="Images/icons8-facebook-64.png" alt="Facebook"></a></li>
+            <li><a href="#"><img src="Images/icons8-twitterx-50.png" alt="X"></a></li>
+            <li><a href="#"><img src="Images/icons8-instagram-circle-30.png" alt="Instagram"></a></li>
         </ul>
     </footer>
 </body>
